Add another afterContentPaint queue to render ads and schedule other non critical work

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,4 @@
 <h2 id="title">Welcome to app scheduler dummy app</h2>
-
+{{#link-to "index"}}Home{{/link-to}}
+{{#link-to "demo"}}Demo{{/link-to}}
 {{outlet}}
