Adding all routes and moving README to docs site

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,6 +1,3 @@
-<h2 id="title">Welcome to app scheduler dummy app</h2>
-{{#link-to "index"}}Home{{/link-to}}
-{{#link-to "first-paint"}}First Paint{{/link-to}}
-{{#link-to "content-paint"}}Content Paint{{/link-to}}
-{{#link-to "aborted-paint"}}Aborted Paint{{/link-to}}
 {{outlet}}
+
+{{docs-keyboard-shortcuts}}
