--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -10,7 +10,7 @@
   Looking for the <strong>Quickstart</strong>? {{docs-link "It's here" "docs.index"}}.
 </div>
 {{#docs-demo class="docs-m-20" as |demo|}}
-  {{#demo.example name="my-demo.hbs"}}
+  {{#demo.example name="when-route-idle"}}
     <p class="docs-mb-8">
       This addon provides a way to defer work into different paint phases of the rendering process to
       get a faster FMP. It also helps to prioritize and coordinate when the paint happens for different
