Clarify FMP acronym

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -13,7 +13,7 @@
   {{#demo.example name="when-route-idle"}}
     <p class="docs-mb-8">
       This addon provides a way to defer work into different paint phases of the rendering process to
-      get a faster FMP. It also helps to prioritize and coordinate when the paint happens for different
+      get a faster <a href="https://docs.google.com/document/d/1BR94tJdZLsin5poeet0XoTW60M0SjvOJQttKT-JK8HI/view">First Meaningful Paint</a> (FMP). It also helps to prioritize and coordinate when the paint happens for different
       parts of the page.
     </p>
     <p class="docs-mb-8">
