Adding tests for FastBoot enabled behavior

--- a/tests/dummy/app/templates/first-paint.hbs
+++ b/tests/dummy/app/templates/first-paint.hbs
@@ -1,3 +1,5 @@
-{{#when-route-painted}}
-  <span class="only-when-route-painted">When Route Painted</span>
-{{/when-route-painted}}
+<div class="first-paint-route">
+  {{#when-route-painted}}
+    <span class="only-when-route-painted">When Route Painted</span>
+  {{/when-route-painted}}
+</div>
