Updating docs to add section on FastBoot

--- a/tests/dummy/app/templates/docs.hbs
+++ b/tests/dummy/app/templates/docs.hbs
@@ -9,6 +9,7 @@
       {{nav.item "whenRoutePainted" "docs.when-route-painted"}}
       {{nav.item "whenRouteIdle" "docs.when-route-idle"}}
       {{nav.item "Testing" "docs.testing"}}
+      {{nav.item "Fastboot" "docs.fastboot"}}
     {{/nav.subnav}}
   {{/viewer.nav}}
 
