--- a/tests/dummy/app/templates/docs.hbs
+++ b/tests/dummy/app/templates/docs.hbs
@@ -8,6 +8,7 @@
       {{nav.item "How it works" "docs.how-it-works"}}
       {{nav.item "whenRoutePainted" "docs.when-route-painted"}}
       {{nav.item "whenRouteIdle" "docs.when-route-idle"}}
+      {{nav.item "Custom mark" "docs.custom-mark"}}
       {{nav.item "Testing" "docs.testing"}}
       {{nav.item "Fastboot" "docs.fastboot"}}
     {{/nav.subnav}}
