task: Updating doc and tests to Octane

--- a/tests/dummy/app/templates/both-painted.hbs
+++ b/tests/dummy/app/templates/both-painted.hbs
@@ -1,8 +1,8 @@
 <div class="both-painted-route">
-  {{#when-route-painted}}
+  <WhenRoutePainted>
     <span class="only-when-route-painted">When Route Painted</span>
-  {{/when-route-painted}}
-  {{#when-route-idle}}
+  </WhenRoutePainted>
+  <WhenRouteIdle>
     <span class="only-when-route-idle">When Route Idle</span>
-  {{/when-route-idle}}
+  </WhenRouteIdle>
 </div>
