--- a/tests/dummy/app/templates/first-paint.hbs
+++ b/tests/dummy/app/templates/first-paint.hbs
@@ -1,5 +1,5 @@
 <div class="first-paint-route">
-  {{#when-route-painted}}
+  <WhenRoutePainted>
     <span class="only-when-route-painted">When Route Painted</span>
-  {{/when-route-painted}}
+  </WhenRoutePainted>
 </div>
