fix hbs lint in route-idle-helper demo route

--- a/tests/dummy/app/templates/route-idle-helper.hbs
+++ b/tests/dummy/app/templates/route-idle-helper.hbs
@@ -5,5 +5,5 @@
     <span class="only-when-route-not-idle">When Route Not Idle</span>
   {{/if}}
 
-  <button class="refresh-button" {{on "click" this.updateRefreshQP}}>Refresh</button>
+  <button class="refresh-button" type="button" {{on "click" this.updateRefreshQP}}>Refresh</button>
 </div>
