chore: Removes deprecated APIs

--- a/tests/dummy/app/templates/content-paint.hbs
+++ b/tests/dummy/app/templates/content-paint.hbs
@@ -3,5 +3,5 @@
     <span class="only-when-route-idle">When Route Idle</span>
   </WhenRouteIdle>
 
-  <LinkTo @route="both-painted">Go to both painted</LinkTo>
+  <LinkTo @route="content-paint">Go to both painted</LinkTo>
 </div>
