--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -15,9 +15,8 @@
       </p>
       <p class="docs-mb-8">
         The `ember-app-scheduler` addon provides APIs to hook into the router to determine when to
-        execute its defered work. It also provides two promise-based functions, `whenRoutePainted`
-        and `whenRouteIdle`, to allow you to control when specific work will execute. An example of
-        `whenRouteIdle` can be seen below.
+        execute its defered work. It also provides a promise-based function, ``whenRouteIdle`, to allow you to control when specific work will execute.
+        An example of `whenRouteIdle` can be seen below.
       </p>
       {{demo.snippet "when-route-idle.js"}}
     </demo.example>
