--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -4,7 +4,7 @@
   <DocsHero @logo="ember" @slimHeading="Ember" @strongHeading="App Scheduler" @byline="An Ember addon to schedule work at different phases of app life cycle" />
 
   <div class="docs-ml-20 docs-mt-8 docs-text-center">
-    Looking for the <strong>Quickstart</strong>? {{docs-link "It's here" "docs.index"}}.
+    Looking for the <strong>Quickstart</strong>? <DocsLink @route="docs.index">It's here</DocsLink>.
   </div>
   <DocsDemo @class="docs-m-20" as |demo|>
     <demo.example @name="when-route-idle">
@@ -18,8 +18,8 @@
         execute its defered work. It also provides a promise-based function, ``whenRouteIdle`, to allow you to control when specific work will execute.
         An example of `whenRouteIdle` can be seen below.
       </p>
-      {{demo.snippet "when-route-idle.js"}}
+      <demo.snippet @name="when-route-idle.js" />
     </demo.example>
   </DocsDemo>
-  <div class="docs-ml-20 docs-mb-8">To learn more, please {{docs-link "read the docs" "docs.index"}}</div>
+  <div class="docs-ml-20 docs-mb-8">To learn more, please <DocsLink @route="docs.index">read the docs</DocsLink></div>
 </div>
